v0.0.1
    - Just comunication between Arduino and Android implemented, no UI yet