@@ -1,2 +1,5 @@
 v0.0.1
-    - Just comunication between Arduino and Android implemented, no UI yet
+    - Just comunication between Arduino and Android implemented
+    - Mock UI
+    - No pannels
+    - No saved preferences
